# LlamaSynth

./: .gitignore  README.md  pyproject.toml  run.py
cards/: assistant.yaml  guest_F.yaml  guest_T.yaml  harry.yaml  leslie.yaml  man_T.yaml  sheldon.yaml  woman_F.yaml
convert-hf-gguf/: convert.sh  download.py
llama_synth/: __init__.py  agent.py  moderator.py  utils.py
llama_synth/prompt/: __init__.py  base.py  manager.py  template.py
tests/: test_function.py
